--- a/journal/202111.md
+++ b/journal/202111.md
@@ -227,6 +227,8 @@ Progress towards Ethereum support:
 - calculate [pending balance](https://github.com/decred/dcrdex/pull/1303) by taking into account pending incoming and outgoing transactions
 - made large [refactoring](https://github.com/decred/dcrdex/pull/1301) of the ETH client to call methods more directly, implement contract versions, switch to EIP-1559 transactions, and more
 
+{ what version is deployed at https://dex.decred.org/ now? }
+
 { image candidates: not seeing any this time }
 
 <a id="dcrandroid" />
@@ -299,17 +301,9 @@ _dcrweb is the source code for the decred.org website._
 - added [author names](https://github.com/decred/dcrweb/pull/1015) to press coverage items
 - updated [Lottie](https://github.com/decred/dcrweb/pull/1020) animations library, fixing animations on [release](https://decred.org/release/) and [history](https://decred.org/history/) pages
 
-{ check other repos in:
-
-- https://github.com/decred
-- https://github.com/planetdecred
-- https://github.com/raedahgroup
-
-}
-
 Other:
 
-- { smaller items go here }
+- the [timestamp.decred.org](https://timestamp.decred.org/) app got several small [fixes](https://github.com/decred/dcrtimegui/pull/122) and an improved copy with consistent terminology
 
 
 ## People
