--- a/journal/202111.md
+++ b/journal/202111.md
@@ -31,8 +31,6 @@ Contents: { sync }
 
 The work reported below has the "merged to master" status unless noted otherwise. It means that the work is completed, reviewed, and integrated into the source code that advanced users can [build and run](https://medium.com/@artikozel/the-decred-node-back-to-the-source-part-one-27d4576e7e1c), but is not yet available in release binaries for regular users.
 
-{ hint: below add an overview of activity for each project. add any other project that warrants a paragraph. drop projects without notable updates. for each project the order of reporting is: changes released > merged to master > started work > discussions and future plans }
-
 <a id="dcrd" />
 
 **[dcrd](https://github.com/decred/dcrd)**
@@ -41,18 +39,18 @@ _dcrd is a full node implementation that powers Decred's peer-to-peer network ar
 
 A minor bug in consensus has been fixed where tickets voting on treasury spends have not been detected as voted and were falsely reported as [missed](https://github.com/decred/dcrd/pull/2780) in some RPC requests. Importantly, the bug cannot cause an unintended fork and only affects data served via RPC. The live ticket pool is still accurate and all votes and payouts are unaffected. The fix will require a database migration.
 
-Welcome [`uint256`](https://github.com/decred/dcrd/pull/2787) - a new package implementing highly optimized allocation-free 256-bit integer arithmetic. It has the potential to speed up the initial chain sync by 5-10% when used in place of the standard library big integers. The package has strong focus on performance and correctness, and features arithmetic, boolean comparison, bitwise logic, bitwise shifts, conversion to/from relevant types, and full formatting support - all served with an ergonomic API, full test coverage and benchmarks. For a full dose of hacker's delight, follow how it came into existence [over 59 commits](https://github.com/decred/dcrd/pull/2787/commits) with a thorough README at the end.
+Welcome [`uint256`](https://github.com/decred/dcrd/pull/2787), a new package implementing highly optimized allocation-free 256-bit integer arithmetic. It has the potential to speed up the initial chain sync by 5-10% when used in place of the standard library big integers. The package has strong focus on performance and correctness, and features arithmetic, boolean comparison, bitwise logic, bitwise shifts, conversion to/from relevant types, and full formatting support - all served with an ergonomic API, full test coverage and benchmarks. For a full dose of hacker's delight, follow how it came into existence [over 59 commits](https://github.com/decred/dcrd/pull/2787/commits) with a thorough README at the end.
 
 The `uint256` package became the first step of a [long-term plan](https://github.com/decred/dcrd/issues/2786) to develop a new `primitives` module. It will become a new fundamental building block of consensus code by consolidating key concepts such as transactions, block headers, blocks, and sequence lock definitions, which are currently spread across multiple packages. Refined abstractions will make the distinction between consensus primitives and the data sharing protocol for greater clarity, and allow for significant performance optimizations.
 
-Construction of the `stdscript` package (an effort to decouple "standard" from "consensus" script handling code, in order to avoid unintended changes to consensus):
+Progress of the `stdscript` package (an effort to decouple "standard" from "consensus" script handling, in order to avoid unintended changes to consensus):
 
 - added [provably pruneable](https://github.com/decred/dcrd/pull/2803) script support. This is a special form of public key script that cannot be spent and is safe to prune from the set of unspent transaction outputs (UTXOs) to save memory. They are primarily useful for anchoring data into the blockchain, as used by [timestamping](https://timestamp.decred.org/) and [Politeia](https://proposals.decred.org/).
 - added support for determining the number [signatures](https://github.com/decred/dcrd/pull/2805) required by a script
 - added extraction of [addresses](https://github.com/decred/dcrd/pull/2807) from standard recognized forms of public key scripts
 - package `stdscript` [moved](https://github.com/decred/dcrd/pull/2810) from the internal staging area to the `txscript` module and is now ready for consumption
 - all packages [converted](https://github.com/decred/dcrd/pull/2808) to use the new `stdscript` package. To make review easier, the change was split into 50 small commits such that everything builds and passes all tests each step of the way.
-- added methods to universally [extract](https://github.com/decred/dcrd/pull/2816) public key and script hashes from stake-related scripts, which helps many applications that don't care about the specific script type (ticket purchase, vote reward, revocation, change, etc)
+- added methods to universally [extract](https://github.com/decred/dcrd/pull/2816) public key hashes and script hashes from stake-related scripts, which helps many applications that don't care about the specific script type (ticket purchase, vote reward, revocation, change, etc)
 
 Other merged changes:
 
@@ -88,12 +86,12 @@ User-facing changes:
 - added ability to restore a [DEX account](https://github.com/decred/decrediton/pull/3552) from a DEX seed
 - added ability to select custom intall [directory](https://github.com/decred/decrediton/pull/3572) for Bitcoin wallet. Any attempts to update existing `bitcoin.conf` have been removed.
 - hidden the [legacy](https://github.com/decred/decrediton/pull/3587) VSP ticket purchasing UI as a first step to removing it
-- added automated tests for: tabbed page component, [Home](https://github.com/decred/decrediton/pull/3598), Privacy and Security [pages](https://github.com/decred/decrediton/pull/3584)
 - ~7 bug fixes
 
 Internal:
 
 - reused [Tabs](https://github.com/decred/decrediton/pull/3592) component from the pi-ui library
+- added automated tests for: tabbed page component, [Home](https://github.com/decred/decrediton/pull/3598), Privacy and Security [pages](https://github.com/decred/decrediton/pull/3584)
 
 Changes in the pi-ui library (shared by Decrediton and Politeia):
 
@@ -101,7 +99,7 @@ Changes in the pi-ui library (shared by Decrediton and Politeia):
 - improved customizability of [Tabs](https://github.com/decred/pi-ui/pull/376) and [CopyableText](https://github.com/decred/pi-ui/pull/382) components
 - added components for [pagination](https://github.com/decred/pi-ui/pull/396) and text [highlighting](https://github.com/decred/pi-ui/pull/404)
 - dependency and linter [upgrades](https://github.com/decred/pi-ui/pull/379)
-- ~6 updates to match new design specs
+- updates to match new design specs
 - ~3 bug fixes
 
 { image candidates: 3594 }
@@ -120,15 +118,15 @@ New [Politeia](https://proposals.decred.org/) release is live! Highlights of v1.
 - various GUI UX improvements
 - parallel trickling in politeiavoter for better privacy and reliability
 - new end-to-end testing infrastructure
-- codebase prepared for the user layer rewrite
+- codebase preparations for the user layer rewrite
+
+{ ^ maybe remove the list and defer to the release notes since Pi section is pretty long already - nice problem to have }
 
 For more details check the release notes in [politeia](https://github.com/decred/politeia/releases/tag/v1.3.0) and [politeiagui](https://github.com/decred/politeiagui/releases/tag/v1.3.0) repositories, or the quick Twitter [walkthrough](https://twitter.com/lukebp/status/1462881215346880524) by @lukebp.
 
-{ ^ maybe remove the list and defer to the release notes since this section is pretty long already - nice problem to have }
-
 User-facing changes merged in November:
 
-- changed [date format](https://github.com/decred/politeiagui/pull/2640) to an unambiguous one like `08 Sep 2021`
+- use an unambiguous [date format](https://github.com/decred/politeiagui/pull/2640) like `08 Sep 2021`
 - fixed [Go Back](https://github.com/decred/politeiagui/pull/2658) navigation
 - ~10 other bug fixes { 2651 2661 2660 2663 2659 2665 2666 2668 2670 2673 - remove after review }
 
@@ -139,12 +137,12 @@ Internal GUI changes:
 
 Backend changes:
 
-- [prevent](https://github.com/decred/politeia/pull/1575) RFP proposals from billing status changes (they do not bill against the treasury, unlike RFP submissions)
-- introduced [`approved`](https://github.com/decred/politeia/pull/1578) status for proposals that cannot bill against the treasury (like RFP), to differentiate with `active` status that can bill
+- [prevent](https://github.com/decred/politeia/pull/1575) RFP proposals from billing status changes (they cannot bill against the treasury, unlike RFP submissions)
+- introduced [`approved`](https://github.com/decred/politeia/pull/1578) status for proposals that cannot bill against the treasury (like RFP), to differentiate from `active` status that can bill
 - implemented [session](https://github.com/decred/politeia/pull/1564) storage in MySQL
 - implemented data integrity checks for the [`usermd`](https://github.com/decred/politeia/pull/1581) ("user metadata") plugin. This is the final check needed to proceed with importing [legacy](https://github.com/decred/politeia/issues/1425) Git proposals into the new tstore.
-- added a flag to the `pictl seedproposals` command to set the [status](https://github.com/decred/politeia/pull/1583) of proposals created with it (helps in testing)
-- added a flag to `pictl` command to print execution [time statistics](https://github.com/decred/politeia/pull/1585) to help with performance testing
+- allow to set the [status](https://github.com/decred/politeia/pull/1583) of proposals created with the `pictl seedproposals` command (helps in testing)
+- added printing of execution [time statistics](https://github.com/decred/politeia/pull/1585) to the `pictl` command to help with performance testing
 - ~2 bug fixes { 1579 1561 - remove after review }
 
 `politeiavoter` command-line tool:
@@ -167,9 +165,9 @@ _vspd is server software for running a Voting Service Provider. A VSP votes on b
 
 - report [status](https://github.com/decred/vspd/pull/302) of the dcrd instance on both the admin page and the status API endpoint
 - show alternate signing address in ticket [search result](https://github.com/decred/vspd/pull/303)
-- added a workaround for tracking [revoked](https://github.com/decred/vspd/pull/301) tickets (until the auto ticket revocations consensus change activates)
-- determine [client IP](https://github.com/decred/vspd/pull/308) from headers set by the reverse proxy server
 - clarified [terminology](https://github.com/decred/vspd/pull/307) around "alternate signing address"
+- added a workaround for tracking [revoked](https://github.com/decred/vspd/pull/301) tickets (will not be needed when auto ticket revocations activate)
+- determine [client IP](https://github.com/decred/vspd/pull/308) from headers set by the reverse proxy server
 - support custom directory for the test [harness](https://github.com/decred/vspd/pull/309)
 
 { image candidates: 303 302 }
@@ -196,6 +194,7 @@ _dcrlnd is Decred's Lightning Network node software. LN enables instant and low-
 
 _cspp is a server for coordinating coin mixes using the CoinShuffle++ protocol. It is non-custodial, i.e. does not hold any funds._
 
+- mixes now occur every [15 minutes](https://github.com/decred/dcrdocs/pull/1188), down from 20 minutes
 - fixed a potential [DoS vector](https://github.com/decred/cspp/pull/75) where invalidation of unmixed data (e.g. due to a double spend) could fail a mix. It has not been exploited to developers' knowledge. This change also makes validation concurrent to reduce latency.
 
 <a id="dcrdex" />
@@ -211,18 +210,18 @@ User-facing changes:
 Internal changes:
 
 - added support for [DCR SPV](https://github.com/decred/dcrdex/pull/788) wallets
-- [consider](https://github.com/decred/dcrdex/pull/1271) both chain sync height and wallet address manager's sync height when syncing BTC
-- removed ban and unban [endpoints](https://github.com/decred/dcrdex/pull/1272) because it is already handled elsewhere and because operator-initiated ban/unban is incompatible in a mesh configuration or a tiered/bonded user scheme (two future concepts)
-- store [active matches](https://github.com/decred/dcrdex/pull/1263) in a separate storage bucket instead of marking them as retired
+- more accurate [sync status](https://github.com/decred/dcrdex/pull/1271) of the BTC wallet
+- removed ban and unban [endpoints](https://github.com/decred/dcrdex/pull/1272) because it is already handled elsewhere and because operator-initiated ban/unban is incompatible with a mesh configuration or a tiered/bonded user scheme (two future concepts)
+- store [active matches](https://github.com/decred/dcrdex/pull/1263) in a separate storage bucket instead of marking them as active or retired
 - added rate [limits](https://github.com/decred/dcrdex/pull/1288) for new routes
 - ~7 bug fixes { 1266 1265 12645 1280 1282 1296 1298 - remove after review }
 
 Progress towards Ethereum support:
 
-- implemented: fetching of raw [tx data](https://github.com/decred/dcrdex/pull/1279), basic contract [validation](https://github.com/decred/dcrdex/pull/1273), [Swap](https://github.com/decred/dcrdex/pull/1248) function, and [SwapConfirmations](https://github.com/decred/dcrdex/pull/1315) function
+- implemented: fetching of raw [transaction data](https://github.com/decred/dcrdex/pull/1279), basic contract [validation](https://github.com/decred/dcrdex/pull/1273), [Swap](https://github.com/decred/dcrdex/pull/1248) function, and [SwapConfirmations](https://github.com/decred/dcrdex/pull/1315) function
 - [pack](https://github.com/decred/dcrdex/pull/1305) the Swap struct (essentially reorder it) to save 5-15% gas when initializing and redeeming swaps
 - removed function for [initiating](https://github.com/decred/dcrdex/pull/1262) a single swap in favor of the batched version, in order to reduce smart contract code and client+server code around it
-- updated swap contract to [redeem](https://github.com/decred/dcrdex/pull/1274) swaps in batches too
+- updated the swap contract to [redeem](https://github.com/decred/dcrdex/pull/1274) swaps in batches too
 - [lock](https://github.com/decred/dcrdex/pull/1291) funds for a possible refund
 - calculate [pending balance](https://github.com/decred/dcrdex/pull/1303) by taking into account pending incoming and outgoing transactions
 - made large [refactoring](https://github.com/decred/dcrdex/pull/1301) of the ETH client to call methods more directly, implement contract versions, switch to EIP-1559 transactions, and more
@@ -260,15 +259,15 @@ _GoDCR is a lightweight desktop wallet app with integrated staking, privacy, and
 - implemented new UI design for the [Staking](https://github.com/planetdecred/godcr/pull/679) page (renamed from Tickets)
 - implemented new [Governance](https://github.com/planetdecred/godcr/pull/691) UI with a new welcome page
 - updated [Settings](https://github.com/planetdecred/godcr/pull/684) page design
-- show account [mixer](https://github.com/planetdecred/godcr/pull/701) view to the Overview page
+- show account [mixer](https://github.com/planetdecred/godcr/pull/701) view on the Overview page
 - added ability to spend from the [unmixed](https://github.com/planetdecred/godcr/issues/674) account
-- ~{} bug fixes { 682 685 692 691*2 695 696 704 693 - remove after review }
+- ~9 bug fixes { 682 685 692 691*2 695 696 704 693 - remove after review }
 
 Merged in [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) library (shared by Android/iOS wallets and GoDCR):
 
 - added [`dexdcr`](https://github.com/planetdecred/dcrlibwallet/pull/210) package to allow client apps to integrate DCRDEX
 
-{ note on how's the revised proposal going and what to expect }
+{ maybe add a note on how the revised proposal is progressing and what to expect }
 
 { image candidates: 685 701 - if you have better images please share }
 
@@ -278,7 +277,7 @@ Merged in [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) library (
 
 _dcrros is a middleware service that provides access to the Decred network via Rosetta API._
 
-- v0.1.0 has been assigned as the first official release of dcrros. It embeds core Decred software v1.6.0 and implements Rosetta spec v1.4.10. See more in the [release notes](https://github.com/decred/dcrros/blob/master/docs/release-notes/release-notes-0.1.0.md).
+- v0.1.0 has been declared as the first official release of dcrros. It embeds core Decred software v1.6.0 and implements Rosetta spec v1.4.10. See the full list of features in the [release notes](https://github.com/decred/dcrros/blob/master/docs/release-notes/release-notes-0.1.0.md).
 - updated to use [latest](https://github.com/decred/dcrros/pull/23) released Decred v1.6.2 and Rosetta SDK v0.7.2. Also added an `--offline` flag to simplify running offline instances of dcrros (e.g. for tx construction and signing, possibly on an airgapped setup).
 - the above change has been released as [v0.1.1](https://github.com/decred/dcrros/pull/24)
 
@@ -289,7 +288,6 @@ _dcrros is a middleware service that provides access to the Decred network via R
 _dcrdocs is the source code for Decred [user documentation](https://docs.decred.org/)._
 
 - [updated](https://github.com/decred/dcrdocs/pull/1190) mkdocs-material theme and polished Markdown sources
-- updated CSPP docs with new [epoch time](https://github.com/decred/dcrdocs/pull/1188) (this is how often mixes occur) of 15 minutes, down from 20 minutes
 
 <a id="dcrweb" />
 
