Dev godcr quote monsa

--- a/journal/202111.md
+++ b/journal/202111.md
@@ -267,7 +267,7 @@ Merged in [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) library (
 
 - added [`dexdcr`](https://github.com/planetdecred/dcrlibwallet/pull/210) package to allow client apps to integrate DCRDEX
 
-{ maybe add a note on how the revised proposal is progressing and what to expect }
+> Hello, after careful consideration the Planet Decred team has determined that we are going to delay the GoDCR proposal v2 until we have a mainnet release. Because of this, please look for the v2 GoDCR proposal to post sometime in January. 1.0 mainnet GoDCR should be finished by the end of the year. ([@monsa00](https://matrix.to/#/!gruHpujXftcsHcghjx:planetdecred.org/$GJ7PliGPTamNznbE7D82QfK05Hm6wQpogg8x2aQkCmw))
 
 { image candidates: 685 701 - if you have better images please share }
 
