add some rel ext

--- a/journal/202111.md
+++ b/journal/202111.md
@@ -502,6 +502,16 @@ In November DCR was trading between USD 91.36-121.75 / BTC 0.001568-0.001936. Th
 
 { governance, funding, chain forks, community splits }
 
+Binance [froze](https://www.coindesk.com/business/2021/11/12/binance-freezes-doge-withdrawals-as-users-report-being-asked-to-return-coins-they-dont-have/) DOGE withdrawals after [apparently](https://twitter.com/dogecoin_devs/status/1458868925039464451) processing a batch of old withdrawal requests accidentally after an upgrade. Binance users reported being asked to return DOGE that was not in their accounts, and being informed that they would no longer be able to make withdrawals until they return the DOGE. Binance later published their [version](https://www.binance.com/en/blog/community/the-inside-story-on-doge-withdrawals-421499824684903102) of the story confirming that the problem was due to upgrading their wallet while it had old stuck transactions, which were then rebroadcast successfully. The explanation states that withdrawals of DOGE were down for 17 days so they could "re-build the wallet".
+
+The NFT concept and its fans have been provoking adverse reactions from some online communities - [Creative Commons](https://twitter.com/creativecommons/status/1463964199785271308?s=20) and [Discord](https://arstechnica.com/gaming/2021/11/discord-ceo-backs-away-from-hinted-nft-integration-after-backlash/) have distanced themselves from NFT-related material, while an NFT project for young writers was [scrapped](https://twitter.com/BadWritingTakes/status/1450965836701831175) after a twitter campaign against it.
+
+Square [announced](https://bitcoinmagazine.com/business/jack-dorsey-square-decentralized-bitcoin-exchange-proposal-announced-tbdex) a white paper detailing its proposal for a decentralized exchange, tbDEX. Square then [changed](https://squareup.com/us/en/press/square-changes-name-to-block) its name to Block.
+
+A  community of crypto investors formed ConstitutionDAO to [try](https://www.vice.com/en/article/qjb8av/constitutiondao-aftermath-everyone-very-mad-confused-losing-lots-of-money-fighting-crying-etc) and buy a rare copy of the US constitution, raised $40 million in ETH but then [lost](https://www.vice.com/en/article/qjb8xv/hedge-fund-ceo-who-bailed-out-gamestop-short-seller-bought-the-constitution) the auction to hedge fund CEO Ken Griffin. This cause a lot of uncertainty about what would happen to the contributed funds, with a new token being announced and cancelled, and the price of the PEOPLE token which contributors to the DAO had received fluctuated wildly. The project ultimately decided to wind down as no agreement could be reached on how to move it forward without the copy of the constitution, contributors can reclaim their ETH (but transaction fees will consume most or all of this for many of the smaller scale contributors) or claim their PEOPLE tokens.
+
+The infamous Infrastructure Bill has been [signed](https://twitter.com/jchervinsky/status/1461384347974615041) into law, set to take effect on Jan 1 2024. A bipartisan bill has been [introduced](https://twitter.com/jerrybrito/status/1461317078175072263) which would address the crypto community's concerns with the Infrastructure Bill.
+
 { DEX }
 
 { relevant exchanges and websites }
