PR Update in Outreach

--- a/journal/202111.md
+++ b/journal/202111.md
@@ -422,6 +422,15 @@ Trying out IG, feedback from IG veterans welcome https://www.instagram.com/decre
 
 https://onlyfans.com/decred - I'll just post the link verbaitm. I don't know what to say. (@bee)
 
+Monde PR’s achievements for November
+
+- Pitched four stories/PR opps to finance and crypto publications
+
+Secured the following news articles:
+
+- @jy-p was interviewed on [Benzinga’s Moon or Bust Show](https://www.youtube.com/watch?v=0My2w4p2-PE), talking about all things Decred  
+- @jz was interviewed by [Authority Magazine](https://medium.com/authority-magazine/jonathan-zeppettini-on-the-5-things-you-need-to-understand-in-order-to-successfully-invest-in-2f09bff32e48) on how to successfully invest in cryptocurrency. The article contains several Decred mentions. 
+
 
 ## Events
 
