--- a/journal/202111.md
+++ b/journal/202111.md
@@ -546,7 +546,7 @@ Most information from third parties is relayed directly from the source after a 
 
 Credits (alphabetical order):
 
-- writing and editing: {}
+- writing and editing: { bee, degeri, l1ndseymm, richardred }
 - reviews and feedback: davecgh, lukebp
 - title image: {}
 - funding: Decred stakeholders
