Dev re fraud proofs

--- a/journal/202111.md
+++ b/journal/202111.md
@@ -54,7 +54,7 @@ Progress of the `stdscript` package (an effort to decouple "standard" from "cons
 
 Other merged changes:
 
-- fill and check [fraud proof](https://github.com/decred/dcrd/pull/2804) data for transactions entering the mempool. This data includes the input amount, block height, and an index in that block. It allows the fees to be calculated without also having access to all of the previous outputs the transaction is spending as well as easily locating previous outputs without requiring a full transaction hash index.
+- fill and check [fraud proof](https://github.com/decred/dcrd/pull/2804) data for transactions entering the mempool. This data includes the input amount, block height, and an index in that block, and allows efficient detection of fraudulent transactions trying to spend more than their inputs provide. As a bonus, it also allows efficient calculation of fees without slower loading of chain data or requiring a full transaction hash index.
 - upgrade code further [decoupled](https://github.com/decred/dcrd/pull/2776) from primary code to remain more stable as the primary code evolves
 - tuned [ping](https://github.com/decred/dcrd/pull/2796) interval to prevent undesirable disconnects in higher latency scenarios
 - optimized memory usage in [`netsync`](https://github.com/decred/dcrd/pull/2825)
