--- a/journal/202111.md
+++ b/journal/202111.md
@@ -304,29 +304,16 @@ Other:
 
 ## People
 
-{ hint: list people who made their first non-trivial commits merged in master branches, in alphabetical order }
-
-Welcome to new first time contributors with code merged to master: {NO NEW CONTRIBUTORS THIS MONTH}
-
-Congratulations to new contractors granted the Decred Contractor Clearance (DCC): [{@handle}]({link to most relevant account}). { hint: check the CMS }
-
-{ welcome new corporate contractors with short intros, if any }
-
-{ updates from existing contractors }
-
 { interviews about people. link to #media for generic references ("3 interviews") and link directly for specific references and/or with quotes }
 
-Community stats as of {date}:
+Community stats as of Dec 1:
 
-- Politeia users: {} (+{})
-- [Twitter](https://twitter.com/decredproject) followers: {} (+{})
-- [Reddit](https://www.reddit.com/r/decred/) subscribers: {} (+{})
-- [Matrix](https://chat.decred.org/) #general users: {} (+{})
-- [Discord](https://discord.gg/GJ2GXfz) users: {} (+{})
-- [Telegram](https://t.me/Decred) users: {} (+{})
-- [YouTube](https://www.youtube.com/decredchannel) subscribers: {} (+{}), views: {} (+{})
-
-{ maybe list/link notable SM activity }
+- [Twitter](https://twitter.com/decredproject) followers: 50,116 (+613)
+- [Reddit](https://www.reddit.com/r/decred/) subscribers: 12,406 (+158)
+- [Matrix](https://chat.decred.org/) #general users: 585 (+34)
+- [Discord](https://discord.gg/GJ2GXfz) users: 2,223 (-44)
+- [Telegram](https://t.me/Decred) users: 3,030 (+90)
+- [YouTube](https://www.youtube.com/decredchannel) subscribers: 4,620 (+0), views: 198K (+1K)
 
 
 ## Governance
