--- a/journal/202111.md
+++ b/journal/202111.md
@@ -339,7 +339,7 @@ See Politeia Digest [issue 49](https://blockcommons.red/politeia-digest/issue049
 
 **Hashrate**: November's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&zoom=kvddhno1-kwon4zhl&scale=linear&bin=block&axis=time) opened at ~278 Ph/s and closed ~437 Ph/s, bottoming at 221 Ph/s and peaking at 441 Ph/s throughout the month.
 
-Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Dec 1: AltPool 36%, Poolin 34%, F2Pool 13%, ViaBTC 7%, Luxor 6%, BTC.com 3%, OKEx 0.4%, CoinMine 0.16%
+Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Dec 1: AntPool 36%, Poolin 34%, F2Pool 13%, ViaBTC 7%, Luxor 6%, BTC.com 3%, OKEx 0.4%, CoinMine 0.16%.
 
 { hint: fallback link for pool distribution: https://dcrstats.com/pow }
 
@@ -349,17 +349,17 @@ Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/dec
 
 The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=kvddhno1-kwon4zhl&scale=linear&bin=block&axis=time) was 7.42-8.19 million DCR, meaning that 54.7-60.5% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=kvddhno1-kwon4zhl&scale=linear&bin=block&axis=time) in proof-of-stake.
 
-After a drop in large drop in stake participation(and prices), the resulting ticket buying saw a new ATH ticket price of 327.8 DCR.
+After a large drop in stake participation (and prices), the following ticket buying saw a new ticket price ATH of 327.8 DCR.
 
-ticket chart from bochinchero https://matrix.to/#/!teQafvHMYpIbqLIieU:decred.org/$jz8tWeRZ9MurrDNrdnZJ4mejk5oE7z11V18XlLTwz1g
+{ ticket chart from bochinchero https://matrix.to/#/!teQafvHMYpIbqLIieU:decred.org/$jz8tWeRZ9MurrDNrdnZJ4mejk5oE7z11V18XlLTwz1g }
 
-**VSP**: On Dec 1, ~6,805 (-595) live tickets were managed by [listed](https://decred.org/vsp/) vspd servers and 195 (-29) by listed legacy dcrstakepool servers. Collectively the 7 legacy and 15 new VSPs managed 12.75% (-6.15%) of the ticket pool.
+**VSP**: On Dec 1, ~6,800 (-600) live tickets were managed by [listed](https://decred.org/vsp/) vspd servers and 195 (-29) by listed legacy dcrstakepool servers. Collectively the 7 legacy and 15 new VSPs managed 17.5% (-1.4%) of the ticket pool. The 3 unlisted but still active legacy VSPs managed 45 (+10) live tickets.
 
 **Nodes**: Throughout November there were around 186 reachable nodes according to [dcrextdata](https://dcrextdata.planetdecred.org/nodes).
 
 Node versions as of Dec 1 [snapshot](https://nodes.jholdstock.uk/user_agents) (208 total, dcrd only): v1.6.2 - 61%, v1.7 dev builds - 13%, v1.6.0 - 12%, v1.6.1 - 7%, v1.6 dev builds - 3.4%, v1.5.2 - 2.4%, v1.5.1 - 0.5%.
 
-{ maybe } The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom={t1}-{t2}&bin=day&axis=time&visibility=true-true-true) varied between {n.n}-{n.n}%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&zoom={t1}-{t2}&bin=day&axis=time) varied between {n}-{n}K DCR.
+The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q3lq8-l0s732o6&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 52.9-55.1% and set a new all-time high with the sum of mixed unspent coins above 7.5 million.
 
 { maybe } Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen {} nodes (+{}), {} channels (+{}) with a total capacity of {n.n} DCR (+{n.n}), as of {date}.
 
